--- a/styles.css
+++ b/styles.css
@@ -157,6 +157,8 @@ html{
       width: 100%;
     }
 
+    
+
 
     @media screen and (max-width:800px) {
 
@@ -189,3 +191,67 @@ html{
 
     }
     
+
+.about{
+  background-color: white;
+}
+
+.about .container {
+  max-width: 1280px ;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  padding: 1rem;
+  gap: 1rem;
+  align-items: center;
+}
+
+.about .container .content-left .img-container{
+  overflow: hidden;
+  border-radius: 10px;
+  height: 40vh;
+}
+
+.about .container .content-left .img-container img{
+  height: 100%;
+  border-radius: 10px;
+  width : 100%;
+}
+
+.about .container .content-right{
+  display: flex;
+  flex-direction: column;
+}
+
+.about .container .content-right h1{
+  font-size: 2.3rem;
+}
+
+.about .container .content-right h1 span{
+  color: var(--main-color);
+}
+
+.about .container .content-right ul{
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  margin-top: 1rem;
+  gap: 0.4rem;
+}
+
+
+@media screen and (max-width:700px) {
+    .about .container{
+      flex-direction: column;
+      
+    }
+
+    .about .container .content-left .img-container img{
+      width: 100%;
+      align-self: center;
+    }
+
+    .about .container .content-right{
+      text-align: center;
+    }
+}
